--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "codegen": "npx @openapitools/openapi-generator-cli generate -i .\\src\\assets\\swagger.codegen.json -g typescript-axios -o .\\src\\api\\",
+    "codegen:mac": "npx @openapitools/openapi-generator-cli generate -i src/assets/swagger.codegen.json -g typescript-axios -o src/api/"
   },
   "dependencies": {
-    "vue": "^3.5.24"
+    "axios": "^1.13.2",
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
